--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@
           {% if page.date %}
           <small class="datetime muted">
             {{ page.date | date_to_string }} -
-            by <a href="https://twitter.com/sailoremo" target="_blank">@zetsubo</a>
+            by <a href="https://twitter.com/sailoremo" target="_blank">Jade</a>
           </small>
           <div class="pagination">
             {% if page.previous %}
